postモデルの日本語対応

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,4 +14,7 @@ ja:
       book:
         title: タイトル
         author: 編著者
-        total_page: 総ページ数      
+        total_page: 総ページ数
+      post:
+        memo: 感想メモ
+        page: ページ数      
